cleaned up code, added unit tests & documentation
